--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -16,6 +16,12 @@
       <li>
         <a href="https://github.com/phoenixframework/phoenix">Source</a>
       </li>
+      <li>
+        <a href="https://google.com">Google</a>
+      </li>
+      <li>
+        <a href="https://bing.com">Bing</a>
+      </li>
     </ul>
   </div>
 
